# flow

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  agent.md  update.sh
csrc/: mem.hpp  simpleif.hpp
design/: breeze_core_memory_map.json  build.sbt
design/src/main/scala/backend/: BreezeBackend.scala
design/src/main/scala/buffer/: fetchbuffer.scala
design/src/main/scala/cache/: BreezeCache.scala  Cache.scala
design/src/main/scala/config/: config.scala
design/src/main/scala/core/: Backend.scala  BreezeCore.scala  Frontend.scala  FuncUnit.scala  InstBuffer.scala  InstDecode.scala  RegFile.scala  common.scala  config.scala  core.scala  flow_core.scala  hello.scala  storm.scala
design/src/main/scala/fase/: ctrl.scala  uart.scala  uart_block.scala
design/src/main/scala/frontend/: BreezeBTB.scala  BreezeFrontend.scala  BreezePHT.scala
design/src/main/scala/hello/: hello.scala  hellomem.scala
design/src/main/scala/interface/: Wishbone.scala  interface.scala
design/src/main/scala/mem/: memctrl.scala  regarry.scala  sram.scala  sram_1r1w.scala  tcm.scala  wbif.scala
design/src/main/scala/sim/: BreezeCoreSimSupport.scala  BreezeCoreTandem.scala  BreezeCoreTandemLog.scala  BreezeCoreTandemParser.scala
design/src/main/scala/top/: config.scala  mini.scala  tiny.scala  top.scala  virflow.scala
design/src/main/scala/wishbone/: wb_block.scala
design/src/test/scala/cache/: breezecacheSpec.scala
design/src/test/scala/config/: BreezeCoreConfigSpec.scala
design/src/test/scala/core/: breezecoreSpec.scala  coreSpec.scala  regfileSpec.scala
design/src/test/scala/frontend/: breezefrontendFE001Spec.scala  breezefrontendFE002Spec.scala  breezefrontendSpec.scala
design/src/test/scala/sim/: BreezeCoreSim.scala  BreezeCoreSimAppSpec.scala  BreezeCoreSimMemoryLoaderSpec.scala
docs/: CACHE_Timing_Diagram.xls  breezefrontend.md  breezefrontend_seq_miss_wave.json  cache.md  fetch.json  flow.md  m-mode-implementation.md  mem.json  simple_bus.md  tandem-trace.md  todo
docs/agent-collab/: current-workflow.md  findings-and-improvements.md  session-log.md
docs/breezefrontend_waves/: breezefrontend_main_test_seq_miss_refill.json  breezefrontend_should_follow_default_flow_after_reset_initial_cycles.json
docs/bugs/: CORE-001.md  CORE-002.md  FE-001.md  FE-002.md  README.md
docs/plans/: 2026-03-02-icache-design.md  2026-03-05-icache-implementation-log.md  2026-03-06-gustengine-testbench.md  2026-03-06-gustfrontend-design.md  2026-03-06-gustfrontend-implementation.md  CHANGELOG_2026-03-05.md
fase/docs/soc01/: README.md
fase/hardware/soc01/: run.py
fpga/diff_reg/: build_xilinx_kcu105.sh  top.v  xilinx_kcu105.tcl  xilinx_kcu105.xdc
fpga/single_litex_soc/: make.py  run.py
fpga/uart_loop/: run.py
fpga/uart_rx/: README.md  run.py
fpga/uart_tx/: run.py
fpga/uart_wb_master/: README.md  run.py
litex_sim_dir/tinysoc/: README.md  sim.py
litex_wrapper/flow/: __init__.py  boot-helper.S  core.py  crt0.S  irq.h  system.h
litex_wrapper/tinycore/: __init__.py  core.py  system.h
sim/GustEngine/: CMakeLists.txt  DEV_GUSTENGINE_TB_2026-03-06.md  TEST_USAGE.md  backend_model.cpp  backend_model.h  tb_main.cpp
sim/ICache/: CMakeLists.txt  PLAN_ICACHE_TB.md  memory_model.cpp  memory_model.h  tb_main.cpp
sim/breezecore/: README.md
sim/breezecore/tests/branch_test/: .gitignore  Makefile  README.md  branch_test.S  branch_test.ld  gen_case.py
sim/breezecore/tests/misa_read_test/: misa_read_test.S  misa_read_test.ld
sim/common/: Makefile  flow_sim.hpp  main.cpp  util.hpp
sim/datapath/: Makefile  hello.cpp  main.cpp
sim/flow_lib/: CMakeLists.txt  README.md
sim/flow_lib/docs/: memory_layout_architecture.md  virtual_memory_handshake_timing.md
sim/flow_lib/include/flow_vmem/: virtual_memory_model.h
sim/flow_lib/src/: virtual_memory_model.cpp
sim/flow_lib/tests/: vmem_layout_smoke.cpp  vmem_smoke.cpp
sim/litex_flow_sim/: CMakeLists.txt  main.cpp  misc.h  wbif.cpp  wbif.h  wbmem.cpp  wbmem.h
sim/mem/: Makefile  sram.cpp  sram_ctrl.cpp  sramlayer.cpp  srammemory.cpp
sim/simple/: Makefile  main.cpp  sim_hellomem.cpp
sim/top/: Makefile  check.py  main.cpp
sim/vir_flow/: CMakeLists.txt  TB_GUIDE.md  tb_main.cpp
sim/vir_flow/example/: start01.S
tests/misc/: Makefile  main.cpp  readwrite.cpp  test02.S  top01.c
tests/ref/: spike_ref.hpp
tests/top_asm/: Makefile  o2hex.awk  test01.S  test03.S  test04.S
